--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,3 +7,42 @@ body {
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   background: #333;
 }
+
+.menu {
+  position: relative;
+  background: #fff;
+}
+
+.menu a {
+  color: #333;
+  display: inline-block;
+  padding: 14px 20px 16px;
+  text-decoration: none;
+}
+
+.menu-item {
+  display: inline-block;
+}
+
+.menu-item:hover .sub-menu {
+  display: block;
+}
+
+.sub-menu {
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: #ddd;
+  padding: 20px;
+  display: none;
+  min-height: 200px;
+}
+
+.sub-menu h3 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.sub-menu p {
+  padding-top: 16px;
+}
